[metadata]
name = aqlm
version = 1.0.0
author = Anonymous ML Scientist
author_email = anonymousmlscientist@gmail.com
description = Efficiently run models quantized with AQLM

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    torch==2.2.0
    transformers==4.37.2
    triton==2.2.0
    numba==0.56.4
    scipy==1.12.0
[options.packages.find]
where = src